Getting swagger to open api 3.0 and implementing jwt token-based auth.
