# src/controllers/logincontroller/login.router.ts
@@ -1,6 +1,6 @@
 import express, { Request, Response } from 'express';
 import { LoginModel } from './login.model';
-import { GetOrCreateActiveSessionByUserId } from '../../domain/repositories/usersession.domain.repository';
+import { MintJwtToken } from '../../domain/services/token.domain.service';
 import { GetByLoginId } from '../../domain/repositories/user.domain.repository';
 import { User } from 'src/domain/entities/user.domain.entity';
 
@@ -10,20 +10,26 @@ export const LoginRouter = express.Router();
 LoginRouter.post('/', async (req: Request, res: Response) => {
 	const model: LoginModel = req.body;
 	if (!model || !model.login || !model.password) {
-		res.status(401).send('The credentials supplied were not correct.');
+		res.status(400).send('The credentials supplied were not correct.');
 		return;
 	}
 	
-	const user: User | null = await GetByLoginId(model.login);
-	if (!user) {
+	const userResponse: User | null | boolean = await GetByLoginId(model.login, model.password);
+	if (userResponse === null) {
 		res.status(404).send('The user specified could not found.');
 		return;
 	}
+	if (userResponse === false) {
+		res.status(401).send('The credentials supplied were not valid.');
+		return;		
+	}
 	
-	const sessionId: string | null = await GetOrCreateActiveSessionByUserId(user.id);
-	if (!sessionId) {
-		res.status(500).send('An unknown error occurred. A new sessionId could not be created.');
+	const user: User = userResponse as User;
+	
+	const jwt: string | null = MintJwtToken(user.id, user.fullname);
+	if (!jwt) {
+		res.status(500).send('An unknown error occurred. A new jwt token could not be minted.');
 		return;
 	}
-	res.status(200).send(sessionId);
+	res.status(201).send(jwt);
 });
