# src/controllers/usercontroller/user.model.ts
@@ -2,7 +2,7 @@ export interface UserModel {
 	id: string,
 	firstname: string,
 	lastname: string,
-	email: string,
-	mobilephone: string,
+	email: string | null,
+	mobilephone: string | null,
 	loginid: string
 }
