# src/swagger.json
@@ -1,27 +1,110 @@
 {
-	"swagger": "2.0",
+	"openapi": "3.0.3",
 	"info": {
 		"description": "This is a simple NodeJS API code golf project to demonstrate NodeJS, Typescript, and OpenAPI.",
 		"version": "1.0.0",
 		"title": "NodeChat"
 	},
-	"schemes": ["http"],
-	"host": "localhost:3000",
-	"basePath": "/",
+	"components": {
+		"securitySchemes": {
+			"bearerAuth": {
+				"type": "http",
+				"scheme": "bearer",
+				"bearerFormat": "JWT"
+			}
+		},
+		"schemas": {
+			"UserModel": {
+				"type": "object",
+				"properties": {
+					"id": {
+						"type": "string"
+					},
+					"firstname": {
+						"type": "string"
+					},
+					"lastname": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					},
+					"mobilephone": {
+						"type": "string"
+					},
+					"loginid": {
+						"type": "string"
+					}				
+				}
+			},
+			"MessageModel": {
+				"type": "object",
+				"properties": {
+					"id": {
+						"type": "string",
+						"nullable": true
+					},
+					"userid": {
+						"type": "string",
+						"nullable": true
+					},
+					"messagedate": {
+						"type": "string",
+						"nullable": true
+					},
+					"messagetext": {
+						"type": "string",
+						"nullable": true
+					}				
+				}
+			},
+			"LoginModel": {
+				"type": "object",
+				"properties": {
+					"login": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					}
+				}		
+			},
+			"GeneralInvalidResponse": {
+				"type": "object",
+				"properties": {
+					"statusCode": {
+						"type": "string"
+					},
+					"message": {
+						"type": "string"
+					}
+				}
+			}			
+		}
+	},
+	"servers": [{
+		"url": "http://localhost:3000/",
+		"description": "Development Server"
+	}],
 	"paths": {
 		"/users": {
+			"parameters": [],
 			"get": {
-				"summary": "Get all Users",
 				"description": "Get all Users",
-				"produces": ["application/json"],
-				"parameters": [],
+				"security": {
+					"bearerAuth": []
+				},
 				"responses": {
 					"200": {
 						"description": "OK",
-						"schema": {
-							"type": "array",
-							"items": {
-								"$ref": "#/definitions/UserModel"
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "array",
+									"items": {
+										"$ref": "#/components/schemas/UserModel"
+									}
+								}								
 							}
 						}
 					}
@@ -29,62 +112,75 @@
 			}
 		},
 		"/users/{id}": {
+			"parameters": [{
+				"name": "id",
+				"in": "path",
+				"description": "id of user to return",
+				"required": true,
+				"type": "string"
+			}],			
 			"get": {
-				"summary": "Get Users By Id",
 				"description": "Get Users By Id",
-				"produces": ["application/json"],
-				"parameters": [{
-					"name": "id",
-					"in": "path",
-					"description": "id of user to return",
-					"required": true,
-					"type": "string"
-				}],
+				"security": {
+					"bearerAuth": []
+				},
 				"responses": {
 					"200": {
 						"description": "OK",
-						"schema": {
-							"type": "object",
-							"$ref": "#/definitions/UserModel"
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "object",
+									"$ref": "#/components/schemas/UserModel"
+								}								
+							}
 						}
 					},
 					"400": {
 						"description": "Bad Request",
-						"schema": {
-							"$ref": "#/definitions/GeneralInvalidResponse"
+						"content": {
+							"text/html": {
+								"schema": {
+									"$ref": "#/components/schemas/GeneralInvalidResponse"
+								}								
+							}
 						}
 					},
 					"404": {
 						"description": "Not Found",
-						"schema": {
-							"$ref": "#/definitions/GeneralInvalidResponse"
+						"content": {
+							"text/html": {
+								"schema": {
+									"$ref": "#/components/schemas/GeneralInvalidResponse"
+								}								
+							}
 						}
 					}
 				}
 			}
 		},
 		"/messages": {
+			"parameters": [],
 			"get": {
-				"summary":"Get all Messages",
 				"description": "Get all Messages",
-				"produces": ["application/json"],
-				"parameters": [],
 				"responses": {
 					"200": {
 						"description": "OK",
-						"schema": {
-							"type": "array",
-							"items": {
-								"$ref": "#/definitions/MessageModel"
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "array",
+									"items": {
+										"$ref": "#/components/schemas/MessageModel"
+									}
+								}								
 							}
 						}
 					}
 				}
 			},
 			"post": {
-				"summary": "Create new Message",
 				"description": "Create new Message",
-				"produces": ["application/json"],
 				"parameters": [{
 					"name": "body",
 					"in": "body",
@@ -92,88 +188,111 @@
 					"required": true,
 					"schema": {
 						"type": "object",
-						"$ref": "#/definitions/MessageModel"
+						"$ref": "#/components/schemas/MessageModel"
 					}
 				}],
 				"responses": {
 					"200": {
 						"description": "OK",
-						"schema": {
-							"type": "object",
-							"$ref": "#/definitions/MessageModel"
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "object",
+									"$ref": "#/components/schemas/MessageModel"
+								}								
+							}
 						}
 					},
 					"400": {
 						"description": "Bad Request",
-						"schema": {
-							"$ref": "#/definitions/GeneralInvalidResponse"
+						"content": {
+							"text/html": {
+								"schema": {
+									"$ref": "#/components/schemas/GeneralInvalidResponse"
+								}								
+							}
 						}
+
 					},
 					"500": {
 						"description": "Internal Server Error",
-						"schema": {
-							"$ref": "#/definitions/GeneralInvalidResponse"
+						"content": {
+							"text/html": {
+								"schema": {
+									"$ref": "#/components/schemas/GeneralInvalidResponse"
+								}								
+							}
 						}
 					}										
 				}
 			}
-		}
-	},
-	"definitions": {
-		"UserModel": {
-			"type": "object",
-			"properties": {
-				"id": {
-					"type": "string"
-				},
-				"firstname": {
-					"type": "string"
-				},
-				"lastname": {
-					"type": "string"
-				},
-				"email": {
-					"type": "string"
-				},
-				"mobilephone": {
-					"type": "string"
-				},
-				"loginid": {
-					"type": "string"
-				}				
-			}
 		},
-		"MessageModel": {
-			"type": "object",
-			"properties": {
-				"id": {
-					"type": "string",
-					"nullable": true
-				},
-				"userid": {
-					"type": "string",
-					"nullable": true
-				},
-				"messagedate": {
-					"type": "string",
-					"nullable": true
-				},
-				"messagetext": {
-					"type": "string",
-					"nullable": true
-				}				
-			}
-		},		
-		"GeneralInvalidResponse": {
-			"type": "object",
-            "properties": {
-				"statusCode": {
-					"type": "string"
-				},
-				"message": {
-					"type": "string"
+		"/login": {
+			"post": {
+				"description": "Authenticate With Service",
+				"parameters": [{
+					"name": "body",
+					"in": "body",
+					"description": "Login model",
+					"required": true,
+					"schema": {
+						"type": "object",
+						"$ref": "#/components/schemas/LoginModel"
+					}
+				}],
+				"responses": {
+					"201": {
+						"description": "Created",
+						"content": {
+							"text/html": {
+								"schema": {
+									"type": "string"
+								}								
+							}
+						}
+					},
+					"400": {
+						"description": "Bad Request",
+						"content": {
+							"text/html": {
+								"schema": {
+									"$ref": "#/components/schemas/GeneralInvalidResponse"
+								}								
+							}
+						}
+					},
+					"404": {
+						"description": "Not Found",
+						"content": {
+							"text/html": {
+								"schema": {
+									"$ref": "#/components/schemas/GeneralInvalidResponse"
+								}								
+							}
+						}
+					},
+					"401": {
+						"description": "Unauthorized",
+						"content": {
+							"text/html": {
+								"schema": {
+									"$ref": "#/components/schemas/GeneralInvalidResponse"
+								}								
+							}
+						}
+					},
+					"500": {
+						"description": "Internal Server Error",
+						"content": {
+							"text/html": {
+								"schema": {
+									"$ref": "#/components/schemas/GeneralInvalidResponse"
+								}								
+							}
+						}
+					}
 				}
 			}
-		}		
+		}
 	}
 }
